# mednotegen

./: .gitignore  README.md  README_SYNTHEA_NOTICE.md  config.yaml  pyproject.toml  setup.py
.github/workflows/: ci-tests.yaml
mednotegen/: cli.py  generator.py  llm_utils.py  synthea_integration.py  templates.py
