[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mednotegen"
version = "0.1.2"
description = "Generate fake patient reports as PDFs."
readme = "README.md"
authors = [
    { name = "Mikael Moise", email = "mikaelmoise00@gmail.com" }
]
requires-python = ">=3.7"
dependencies = [
    "faker",
    "fpdf",
    "pandas",
    "pyyaml",
    "numpy"
]

[project.optional-dependencies]
llm = ["openai"]
keywords = ["synthea", "medical notes", "pdf"]
[project.urls]
"Repository" = "https://github.com/nortelabs/mednotegen"
"Bug Tracker" = "https://github.com/nortelabs/mednotegen/issues"
[project.scripts]
mednotegen = "mednotegen.cli:main"

[tool.setuptools.packages.find]
include = ["mednotegen*"]
